Fix warnings for release-11